<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Calendar_Static</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_main">Expense Calculator</string>
	<string name="title_activity_planner">Expenses</string>
	<string name="test">Testing</string>
	<string name="Add_Expense">Add</string>
	<string name="category">Category</string>
	<string name="amount">Amount</string>
	<string name="description">Description</string>
	<string name="Save">save</string>
	<string name="Cancel">Cancel</string>
	<string name="title_expense_list">Expense List</string>
	<string name="Add_Category">Add Category</string>
	<string name="category_type">type</string>
	<string name="all_categories">All Categories</string>
	<string name="all_expenses">All Expenses</string>
	<string name="new_expense">New Expense</string>
	<string name="new_category">New Category</string>
	<string name="expenses">Expenses</string>
	<string name="categories">Categories</string>
	<string name="date">Date</string>

	<string-array name="category_array">
		<item> - Select Type - </item>
		<item>Income </item>
		<item>Expense</item>
	</string-array>
	<string-array name="category_filter">
		<item>All Categories</item>
		<item>Income </item>
		<item>Expense</item>
	</string-array>
	<string-array name="filter_expenses">
		<item>Today </item>
		<item>This Week</item>
		<item>This Month</item>
	</string-array>

	<string name="title_activity_category">CategoryActivity</string>

</resources>