<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:background="#EDEDED"
	android:orientation="vertical" >

	<!-- need to change the  edit to dropdown here -->

	<LinearLayout
		android:id="@+id/newexpenseheader"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:background="@android:drawable/bottom_bar"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/allexpenses"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginLeft="10dp"
			android:gravity="center|left"
			android:hint="@string/new_expense"
			android:textColor="#FFFFFF"
			android:textSize="15sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="horizontal" >

		<TextView
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:gravity="center|left"
			android:hint="@string/category"
			android:textColor="#000000"
			android:textSize="16sp" />

		<EditText
			android:id="@+id/category"
			android:layout_width="250dp"
			android:layout_height="30dp"
			android:layout_marginLeft="10dp"
			android:background="@drawable/edit_text"
			android:ems="10"
			android:inputType="text"
			android:textColor="#000000"
			android:textCursorDrawable="@null" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="horizontal" >

		<TextView
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:gravity="center|left"
			android:hint="@string/amount"
			android:textColor="#000000"
			android:textSize="16sp" />

		<EditText
			android:id="@+id/amount"
			android:layout_width="250dp"
			android:layout_height="30dp"
			android:layout_marginLeft="10dp"
			android:background="@drawable/edit_text"
			android:inputType="number"
			android:textColor="#000000"
			android:textCursorDrawable="@null" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="horizontal" >

		<TextView
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:gravity="center|left"
			android:hint="@string/description"
			android:textColor="#000000"
			android:textSize="16sp" />

		<EditText
			android:id="@+id/description"
			android:layout_width="250dp"
			android:layout_height="93dp"
			android:layout_marginLeft="10dp"
			android:background="@drawable/edit_text"
			android:inputType="textMultiLine"
			android:lines="10"
			android:textColor="#000000"
			android:textCursorDrawable="@null" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="horizontal" >

		<TextView
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:gravity="center|left"
			android:hint="@string/date"
			android:textColor="#000000"
			android:textSize="16sp" />

		<EditText
			android:id="@+id/date"
			android:layout_width="162dp"
			android:layout_height="30dp"
			android:layout_marginLeft="10dp"
			android:background="@drawable/edit_text"
			android:inputType="date"
			android:onClick="selectDate"
			android:textColor="#000000" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="horizontal"
		android:weightSum="2" >

		<Button
			android:id="@+id/save_expense"
			style="@style/buttonStyle"
			android:layout_width="100dp"
			android:layout_height="30dp"
			android:layout_marginLeft="90dp"
			android:gravity="center"
			android:onClick="saveExpense"
			android:text="@string/Save" />

		<Button
			android:id="@+id/cancel"
			style="@style/buttonStyle"
			android:layout_width="100dp"
			android:layout_height="30dp"
			android:layout_marginLeft="10dp"
			android:gravity="center"
			android:onClick="CancelExpense"
			android:text="@string/Cancel" />
	</LinearLayout>

</LinearLayout>