<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/newexpenselayout"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#EDEDED"
		android:orientation="vertical" >

		<LinearLayout
			android:id="@+id/newexpenseheader"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/newexpense"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:gravity="center|left"
				android:text="@string/new_expense"
				android:textColor="@color/black"
				android:textSize="15sp" />
		</LinearLayout>

		<Spinner
			android:id="@+id/category"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="5dp"
			android:dropDownVerticalOffset="-100dp"
			android:spinnerMode="dropdown" />

		<EditText
			android:id="@+id/amount"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:hint="@string/amount"
			android:inputType="number"
			android:textColor="#000000"
			android:textCursorDrawable="@null" >
		</EditText>

		<EditText
			android:id="@+id/description"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:ems="10"
			android:hint="@string/description"
			android:inputType="textMultiLine"
			android:lines="10"
			android:textAlignment="center"
			android:textColor="#000000"
			android:textCursorDrawable="@null" >
		</EditText>

		<EditText
			android:id="@+id/date"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:inputType="date"
			android:onClick="selectDate"
			android:textColor="#000000" />

		<LinearLayout
			android:id="@+id/buttons"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:weightSum="2" >

			<Button
				android:id="@+id/save_expense"
				style="?android:attr/buttonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:onClick="saveExpense"
				android:text="@string/Save" />

			<Button
				android:id="@+id/cancel"
				style="?android:attr/buttonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_weight="1"
				android:gravity="center"
				android:onClick="cancelExpense"
				android:text="@string/Cancel" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>